Added sample app. Added responsive design. Added images.

--- a/asserts/sample.html
+++ b/asserts/sample.html
@@ -9,10 +9,10 @@
 
     <meta name="viewport" content="initial-scale=1" />
   </head>
-  <body style="background:#F5F5F5;">
+  <body style="background-color:gray;">
     <div class="container-fluid">
-      <div ng-app="lzCricket" style="width:800px;margin:auto;">
-        <div lz-cricket-match="" class="lz-theme-green-red"></div>
+      <div ng-app="lzCricket">
+        <div lz-cricket-match="" class="lz-outter-box lz-theme-green-red lz-color-bg"></div>
       </div>
     </div>
     <!-- Angular Material Dependencies -->
@@ -20,6 +20,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
     
+    <script type="text/javascript">    
+    </script>
     <script src="js/lz-cricket-angular.js"></script>
   </body>
 </html>
